<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margin_default">

    <TextView
        android:id="@+id/txvCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/codEst"
        android:textAlignment="center"
        android:textSize="@dimen/datosText"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/txvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nomEst"
        android:textAlignment="center"
        android:textSize="@dimen/datosText"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txvCodigo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/txvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/versionApp"
        android:textAlignment="center"
        android:textSize="@dimen/datosText"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txvNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>